--- a/PetGrooming/PetGrooming.csproj
+++ b/PetGrooming/PetGrooming.csproj
@@ -173,6 +173,8 @@
     <Compile Include="Models\Owner.cs" />
     <Compile Include="Models\Pet.cs" />
     <Compile Include="Models\Species.cs" />
+    <Compile Include="Models\ViewModels\ShowSpecies.cs" />
+    <Compile Include="Models\ViewModels\UpdatePet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
